Player on mobile fixes

--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -3,6 +3,9 @@
   &-playlist {
     max-height: calc(50vh - 63px);
     overflow: auto;
+    @media (--mobile) {
+      max-height: none;
+    }
   }
   &-track_button {
     border: none;
