--- a/src/containers/Lineup/LineupNavStages.css
+++ b/src/containers/Lineup/LineupNavStages.css
@@ -3,6 +3,7 @@
   width: 4.2rem;
   position: sticky;
   height: calc(100vh - 63px);
+  z-index: 10;
   @media (--mobile) {
     width: 100%;
     height: 4.2rem;
